pb desktop OK. Test avant live

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <nav class="navbar">
+    <nav>
       <div class="logo"><img src="./easyJokenav2.png" /></div>
       <div class="buttons">
         <ul>
@@ -32,7 +32,6 @@
         </ul>
       </div>
     </nav>
-    <main>
       <div class="background">
         <img src="./backgroud2.png" />
         <h1>
@@ -245,7 +244,6 @@
           <br /><br />
         </p>
       </div>
-    </main>
     <footer id="wedontcare">
       <div class="emails">
         <ul>
